# Localization-UI

./: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: check.yml  publish.yml
src/: App.tsx  index.ts  main.tsx  protocol.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DragDropZone.tsx  LeftBar.tsx  ThemeProvider.tsx  TitleBar.tsx
src/components/views/: EditorView.tsx  SessionChat.tsx  SessionView.tsx  SettingsView.tsx
src/components/views/editor/: AddKeyModal.tsx  ArrayKeyEditor.tsx  ClearAllDataModal.tsx  ClearGroupValuesModal.tsx  ClearValuesModal.tsx  CreateSessionModal.tsx  DeleteGroupModal.tsx  DeleteKeyModal.tsx  ExportJsonModal.tsx  ImportJsonModal.tsx  KeyDetailsPanel.tsx  KeyListItem.tsx  KeyListSidebar.tsx  KeyTreeGroupRow.tsx  PasteJsonDataModal.tsx  RenameGroupModal.tsx  RenameKeyModal.tsx  RichTextEditorModal.tsx  StringKeyEditor.tsx  TranslateDeeplModal.tsx  TranslateGeminiModal.tsx  keyTree.ts  types.ts
src/hooks/: useTheme.ts
src/lib/: bloc.ts  deepl.ts  gemini.ts  keyring.ts  loadBlocFiles.ts  protocol.ts  session.ts  types.ts
src/pages/: EditorPage.tsx  MainPage.tsx
src/stores/: editorStore.ts  sessionStore.ts  settingsStore.ts  updateStore.ts
src/styles/: globals.css
src/utils/: keyTree.ts  languages.ts
