[package]
name = "localization-ui"
version = "0.1.0"
description = "A Localization Editor for Unity"
authors = ["PicoShot <picoshot241@gmail.com>"]
edition = "2021"

[lib]
name = "localization_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
