cargo-features = ["profile-rustflags", "trim-paths"]
[package]
name = "localization-ui"
version = "0.1.3"
description = "A Localization Editor for Unity"
authors = ["PicoShot <picoshot241@gmail.com>"]
edition = "2024"

[lib]
name = "localization_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Localization-UI"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug = false
debug-assertions = false
incremental = false
trim-paths = true
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-persisted-scope = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-websocket = "2"
tauri-plugin-keyring = "0.1.0"
tauri-plugin-os = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
